# madakit

./: .codecov.yml  .gitignore  .readthedocs.yml  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXPANSION.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: api-reference.md  architecture.md  extension-guide.md  index.md  tutorial.md  user-guide.md
docs/getting-started/: configuration.md  installation.md  integrations.md  middleware.md  providers.md  quickstart.md
docs/stylesheets/: extra.css
scripts/: build.sh
src/mada_modelkit/: __init__.py  _base.py  _errors.py  _types.py
src/mada_modelkit/cli/: __init__.py  migrate.py  scaffold.py
src/mada_modelkit/config/: __init__.py  loader.py
src/mada_modelkit/integrations/: fastapi.py  flask.py  langchain.py  llamaindex.py
src/mada_modelkit/middleware/: __init__.py  ab_test.py  batching.py  cache.py  circuit_breaker.py  consensus.py  content_filter.py  cost_control.py  fallback.py  function_calling.py  load_balancing.py  logging.py  metrics.py  prompt_template.py  rate_limit.py  retry.py  stream_aggregation.py  timeout.py  tracking.py
src/mada_modelkit/providers/: _http_base.py  _openai_compat.py
src/mada_modelkit/providers/cloud/: __init__.py  anthropic.py  cohere.py  deepseek.py  fireworks.py  gemini.py  groq.py  mistral.py  openai.py  replicate.py  together.py
src/mada_modelkit/providers/local_server/: gpt4all.py  jan.py  lmstudio.py  localai.py  ollama.py  vllm.py
src/mada_modelkit/providers/native/: llamacpp.py  transformers.py
src/mada_modelkit/providers/specialized/: __init__.py  elevenlabs.py  embedding.py  stability.py
src/mada_modelkit/testing/: __init__.py  fixtures.py  utils.py
src/mada_modelkit/tools/: __init__.py  registry.py  workflow.py
src/madakit/: __init__.py  _base.py  _errors.py
src/madakit/cli/: migrate.py  scaffold.py
src/madakit/config/: __init__.py  _schema.py  loader.py
src/madakit/integrations/: __init__.py  fastapi.py  flask.py  langchain.py  llamaindex.py
src/madakit/middleware/: __init__.py  ab_test.py  batching.py  cache.py  circuit_breaker.py  consensus.py  content_filter.py  cost_control.py  fallback.py  function_calling.py  load_balancing.py  logging.py  metrics.py  prompt_template.py  rate_limit.py  retry.py  stream_aggregation.py  timeout.py  tracking.py
src/madakit/providers/: __init__.py  _http_base.py  _openai_compat.py
src/madakit/providers/cloud/: anthropic.py  cohere.py  deepseek.py  fireworks.py  gemini.py  groq.py  mistral.py  openai.py  replicate.py  together.py
src/madakit/providers/local_server/: __init__.py  gpt4all.py  jan.py  lmstudio.py  localai.py  ollama.py  vllm.py
src/madakit/providers/native/: __init__.py  llamacpp.py  transformers.py
src/madakit/providers/specialized/: elevenlabs.py  embedding.py  stability.py
src/madakit/testing/: __init__.py  fixtures.py  utils.py
src/madakit/tools/: __init__.py  registry.py  workflow.py
tests/: conftest.py  helpers.py  test_base.py  test_e2e.py  test_errors.py  test_imports.py  test_types.py
tests/cli/: test_migrate.py  test_scaffold.py
tests/config/: test_loader.py  test_schema.py
tests/integrations/: test_fastapi.py  test_flask.py  test_langchain.py  test_llamaindex.py
tests/middleware/: conftest.py  test_ab_test.py  test_batching.py  test_cache.py  test_circuit_breaker.py  test_composition.py  test_consensus.py  test_content_filter.py  test_cost_control.py  test_fallback.py  test_function_calling.py  test_load_balancing.py  test_logging.py  test_metrics.py  test_middleware_init.py  test_prompt_template.py  test_rate_limit.py  test_retry.py  test_stream_aggregation.py  test_timeout.py  test_tracking.py
tests/providers/: test_http_base.py  test_openai_compat.py
tests/providers/cloud/: test_anthropic.py  test_cloud_init.py  test_cohere.py  test_deepseek.py  test_fireworks.py  test_gemini.py  test_groq.py  test_mistral.py  test_openai.py  test_replicate.py  test_together.py
tests/providers/local_server/: test_gpt4all.py  test_jan.py  test_lmstudio.py  test_local_server_init.py  test_localai.py  test_ollama.py  test_vllm.py
tests/providers/native/: test_llamacpp.py  test_native_init.py  test_transformers.py
tests/providers/specialized/: __init__.py  test_elevenlabs.py  test_embedding.py  test_stability.py
tests/testing/: test_utils.py
tests/tools/: test_registry.py  test_workflow.py
